# gruppo_progetto

./: .gitignore  README.md
evaluation/evaluation_flow/: README.md  pyproject.toml
evaluation/evaluation_flow/output/: report.md
evaluation/evaluation_flow/src/evaluation_flow/: main.py
evaluation/evaluation_flow/src/evaluation_flow/.deepeval/: .deepeval  .deepeval-cache.json  .deepeval_telemetry.txt
evaluation/evaluation_flow/src/evaluation_flow/crews/eval_crew/: eval_crew.py
evaluation/evaluation_flow/src/evaluation_flow/crews/eval_crew/config/: agents.yaml  tasks.yaml
evaluation/evaluation_flow/src/evaluation_flow/output/: report.md
evaluation/evaluation_flow/src/evaluation_flow/tools/: custom_tool.py
rag_or_search/: .gitignore  Application Documentation Template - techops.html  crewai_flow.html  diagnostic_test.py  pyproject.toml  report.md  test_complete_rag.py  test_rag.py
rag_or_search/docs/: conf.py  index.rst
rag_or_search/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
rag_or_search/docs/_build/html/.doctrees/: environment.pickle  index.doctree
rag_or_search/outputs/: ai_act.md  ai_act_with_placeholders.md
rag_or_search/src/rag_or_search/: main.py
rag_or_search/src/rag_or_search/crews/aiactcrew/: aiactcrew.py
rag_or_search/src/rag_or_search/crews/imagecrew/: imagecrew.py
rag_or_search/src/rag_or_search/tools/: doc_loader.py  image_generation_tool.py  placeholder_image_generation  rag.py  rag_utils.py  search.py  template_loader.py  test_tool.py
(+12 files in other folders)
