[project]
name = "evaluation_flow"
version = "0.1.0"
description = "evaluation_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
    "ddgs>=9.5.5",
]

[project.scripts]
kickoff = "evaluation_flow.main:kickoff"
run_crew = "evaluation_flow.main:kickoff"
plot = "evaluation_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
